tests/ui/type-alias-impl-trait/define_opaques_attr/generics.stderr
error: expected unsuffixed literal, found `<`
  --> $DIR/generics.rs:6:23
   |
LL | #[define_opaque(Tait::<()>)]
   |                       ^

error: expected one of `(`, `,`, `::`, or `=`, found `<`
  --> $DIR/generics.rs:10:21
   |
LL | #[define_opaque(Tait<()>)]
   |                     ^ expected one of `(`, `,`, `::`, or `=`

error[E0601]: `main` function not found in crate `generics`
  --> $DIR/generics.rs:12:13
   |
LL | fn main() {}
   |             ^ consider adding a `main` function to `$DIR/generics.rs`

error: unconstrained opaque type
  --> $DIR/generics.rs:3:16
   |
LL | type Tait<T> = impl Sized;
   |                ^^^^^^^^^^
   |
   = note: `Tait` must be used in combination with a concrete type within the same crate

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0601`.
